Actualzando nombre de Habitacion y limpiando base de datos

--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionDoble.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionDoble.razor
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitación Doble</h1>
+        <h1>Habitación 4 Estrellas </h1>
     </div>
     <div class="card-body text-center">
         <img src="../Resources/Doble.jpg" style="width:50%; height:500px" />
@@ -16,10 +16,10 @@
             Esta habitacion es especial para amistades o parejas que quieren divertirse.
         </p>
         <p>
-            En esta habitación podras encontrar un baño moderno color blanco coral y azul oscuro, ademas
-            de una mini sala donde podran de disfrutar de todo el catalago que ofrecemos en nuestra gran tv.
-            Aparte de lo ya mencionado tiene un balcon con vista al mar para poder apreciar la hermosura
-            de las olas junto al atardecer.
+            En esta habitación podras encontrar un baño moderno color blanco coral y azul oscuro, airea acondicionado, wifi, 
+            refrigerador y servicio al cuarto, ademas  de una mini sala donde podran de disfrutar de todo el catalago que 
+            ofrecemos en nuestra gran tv. Aparte de lo ya mencionado tiene un balcon con vista al mar para poder apreciar 
+            la hermosura de las olas junto al atardecer.
 
         </p>
 
