--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitación Individual</h1>
+        <h1>Habitación 3 Estrellas </h1>
     </div>
     <div class="card-body text-center">
         <img src="../Resources/Sencilla.jpg" style="width:50%; height:500px" />
@@ -14,7 +14,7 @@
             que favorece para las personas tranquilas y solitarias.
         </p>
         <p>
-            En esta habitación podras encontrar un baño moderno color blanco coral, ademas
+            En esta habitación podras encontrar un baño moderno color blanco coral, aire acondicionado y refrigerador, ademas
             de una television plasma y una mini neverita que estara llena de un delicioso
             yogurt con frutas, unas cuantas cervezas y una botella de agua.
 
