--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuite.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuite.razor
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitación Suite Master</h1>
+        <h1>Habitación Carlos III</h1>
     </div>
     <div class="card-body text-center">
         <img src="../Resources/master1 suite.jpg" style="width:50%; height:500px" />
@@ -16,8 +16,8 @@
             en el paraiso ya que tiene las mejores comodidades para cada una de tus necesidades.
         </p>
         <p>
-            En esta habitación podras encontrar un jacuzzi con vista al mar, siempre tendras
-            disponible de forma gratuita todos los servicios a la habitación, posee aparte una sala,
+            En esta habitación podras encontrar un Refrigerador, aire acondicionado, wifi y jacuzzi con vista al mar,
+            siempre tendras disponible de forma gratuita todos los servicios a la habitación, posee aparte una sala,
             un comedor y un mini bar donde podras contratar a un personal del staff para preparar
             todas tus bebidas.
         </p>
