--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuiteJunior.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuiteJunior.razor
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitación Suite Junior</h1>
+        <h1>Habitación Carlos IV</h1>
     </div>
     <div class="card-body text-center">
         <img src="../Resources/junior-suite-private-pool.jpg" style="width:50%; height:500px" />
@@ -16,8 +16,8 @@
             en el paraiso ya que tiene las mejores comodidades para cada una de tus necesidades.
         </p>
         <p>
-            En esta habitación podras encontrar un jacuzzi con vista al mar, un minicomedor
-            siempre tendras disponible de forma gratuita todos los servicios a la habitación
+            En esta habitación podras encontrar Refrigerador, aire acondicionado, wifi y jacuzzi con vista al mar,
+            un minicomedor siempre tendras disponible de forma gratuita todos los servicios a la habitación
             y un mini bar donde podras contratar a un personal del staff para preparar todas
             tus bebidas.
         </p>
