--- a/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
@@ -10,7 +10,7 @@
                     <img src="../Resources/master1 suite.jpg" style="width:100%; height:300px" />
                     <div class="card-body">
                         <div class="text-center">
-                            <h5> Habitación Master Suite </h5>
+                            <h5> Habitación Carlos III </h5>
                             <a href="HabitacionSuite" class="btn btn-outline-primary">Información de Habitación</a>
                         </div>
                     </div>
@@ -20,7 +20,7 @@
                     <img src="../Resources/junior-suite-private-pool.jpg" style="width:100%; height:300px"/>
                     <div class="card-body">
                         <div class="text-center">
-                            <h5> Habitación Junior Suite </h5>
+                            <h5> Habitación Carlos IV </h5>
                             <a href="HabitacionSuiteJunior" class="btn btn-outline-primary">Información de Habitación</a>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
                     <img src="../Resources/Doble.jpg" style="width:100%; height:300px" />
                     <div class="card-body">
                         <div class="text-center">
-                            <h5> Habitación Doble </h5>
+                            <h5> Habitacion 4 Estrellas  </h5>
                             <a href="HabitacionDoble" class="btn btn-outline-primary">Información de Habitación</a>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                     <img src="../Resources/Sencilla.jpg" style="width:100%; height:300px" />
                     <div class="card-body">
                         <div class="text-center">
-                            <h5> Habitación Individual </h5>
+                            <h5> Habitacion 3 Estrellas  </h5>
                             <a href="HabitacionSimple" class="btn btn-outline-primary">Información de Habitación</a>
                         </div>
                     </div>
