--- a/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/RegistroReservaciones.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/RegistroReservaciones.razor
@@ -32,10 +32,10 @@
                         <div class="input-group">
                             <select class="form-control" @bind="FiltroHabitacion">
                                 <option value="0">Todo</option>
-                                <option value="1">Individual</option>
-                                <option value="2">Doble</option>
-                                <option value="3">Suite Máster</option>
-                                <option value="4">Suite Junior</option>
+                                <option value="1">Habitacion 3 Estrellas </option>
+                                <option value="2">Habitacion 4 Estrellas </option>
+                                <option value="3">Carlos III</option>
+                                <option value="4">Carlos IV</option>
                             </select>
                             <div class="input-group-append">
                                 <button type="button" class="btn btn-primary input-group-text" @onclick="@(u => ConsultarHabitaciones())"><i class="oi oi-list-rich" /> Consultar</button>
