cambio de los tipos de habitaciones y sus caracteristicas, y agregado del encargado en actividades

--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Actividades.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Actividades.razor
@@ -69,6 +69,7 @@
                                 <th>Nombre de Actividad</th>
                                 <th>Descripción</th>
                                 <th>Lugar</th>
+                                <th>Encargado</th>
                                 <th>Fecha</th>
                                 <th>Hora Inicio</th>
                                 <th>Hora Final</th>
@@ -83,6 +84,7 @@
                                     <td>@item.NombreActividad</td>
                                     <td>@item.Descripcion</td>
                                     <td>@item.Lugar</td>
+                                    <td>@item.Encargado</td>
                                     <td>@item.Fecha</td>
                                     <td>@item.HoraInicio.ToString("hh:mm tt")</td>
                                     <td>@item.HoraFinal.ToString("hh:mm tt")</td>
