Mejora en el Diseño

--- a/SweetDreams/SweetDreams.Clients/Pages/Index.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Index.razor
@@ -1,6 +1,46 @@
 ﻿@page "/"
 
-<h1>Bienvenido a la interfaz cliente del hotel SweetDreams!!</h1>
+<div class="row justify-content-center">
+    <div class="row align-self-center" style="width:500px; height:200px;">
+        <div id="carouselpass" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="carouselpass" data-slide-to="0" class="active"></li>
+                <li data-target="carouselpass" data-slide-to="1"></li>
+                <li data-target="carouselpass" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="2000">
+                    <img src="../Resources/restaurantbeach.jpg" style="width:500px; height:200px;" class="d-block">
+                </div>
+                <div class="carousel-item" data-interval="2000">
+                    <img src="../Resources/Piscina.jpg" style="width:500px; height:200px;" class="d-block">
+                </div>
+                <div class="carousel-item" data-interval="2000">
+                    <img src="../Resources/Room.jpg" style="width:500px; height:200px;" class="d-block ">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselpass" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselpass" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <h3>Hotel SweetDreams!!</h3>
+</div>
+
+<div>
+    <p>
+        Hola pendejos, este es HOTEL SWEET DREAMS donde tus sueños se hacen realidad, aqui podras comer, dormir y c*****, llevate de la lujuria y adentrate a este sistema.
+        Puedes venir acompanado con tu pareja o venir con tus familiares o amigos, no tengas miedo y dele paca' BROOOOOOO.
+    </p>
+</div>
 
 @code{
 
