--- a/SweetDreams/SweetDreams.Clients/wwwroot/css/app.css
+++ b/SweetDreams/SweetDreams.Clients/wwwroot/css/app.css
@@ -68,6 +68,7 @@ app {
     .sidebar .nav-item {
         font-size: 0.9rem;
         padding-bottom: 0.5rem;
+        color:black;
     }
 
         .sidebar .nav-item:first-of-type {
