--- a/SweetDreams/SweetDreams.Clients/Pages/Index.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Index.razor
@@ -1,50 +1,83 @@
 ﻿@page "/"
 
-<div class="row justify-content-center">
-    <div class="row align-self-center" style="width:500px; height:200px;">
-        <div id="carouselpass" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="carouselpass" data-slide-to="0" class="active"></li>
-                <li data-target="carouselpass" data-slide-to="1"></li>
-                <li data-target="carouselpass" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-interval="2000">
-                    <img src="../Resources/restaurantbeach.jpg" style="width:500px; height:200px;" class="d-block">
-                </div>
-                <div class="carousel-item" data-interval="2000">
-                    <img src="../Resources/Piscina.jpg" style="width:500px; height:200px;" class="d-block">
-                </div>
-                <div class="carousel-item" data-interval="2000">
-                    <img src="../Resources/Room.jpg" style="width:500px; height:200px;" class="d-block ">
+    <div class="view" style="        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url('resources/mlb-villa-outdoor-fireplace.jpg');
+        background-position: center;
+        width: auto;
+        height: 640px;">
+
+        <div class="container position-relative" style="width: 1200px; height: 580px;">
+            <div class="modal-header justify-content-center">
+                <h3>Hotel SweetDreams!!</h3>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="row align-self-center" style="width:600px; height:300px;">
+                    <div id="carouselpass" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="carouselpass" data-slide-to="0" class="active"></li>
+                            <li data-target="carouselpass" data-slide-to="1"></li>
+                            <li data-target="carouselpass" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-interval="2000">
+                                <img src="../Resources/Room.jpg" style="width:600px; height:300px;" class="d-block ">
+                            </div>
+                            <div class="carousel-item" data-interval="2000">
+                                <img src="../Resources/Piscina.jpg" style="width:600px; height:300px;" class="d-block">
+                            </div>
+                            <div class="carousel-item" data-interval="2000">
+                                <img src="../Resources/restaurantbeach.jpg" style="width:600px; height:300px;" class="d-block">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselpass" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Anterior</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselpass" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Siguiente</span>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselpass" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselpass" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Siguiente</span>
-            </a>
+            <div class="text-body" style="
+                                          background-color:darkgray;
+                                          font-family:'Comic sans MS';
+                                          font-size:16px;">
+                
+                <p style="color:black;">
+                    Bienvenidos al Hotel SweetDreams donde hacemos de tus vacaciones las mejores de todas.
+                </p>
+                <p style="color:black;">
+                    Este Hotel cuenta con todo tipo de Actividades, Comidas, Juegos de Piscina, Shows y más.
+                    Ademas contamos con los mejores servicios del lugar. Puedes traer a tu pareja o a tu familias y amigos
+                    para tener una divercion que jamas olvidaras.
+                </p>
+            </div>
+
+            <div class="text-body justify-content-center" style="
+                                          font-family:'Comic sans MS';
+                                          color:white;
+                                          font-size:16px;">
+                <p style="color:white; text-align:center">
+                    Tel:809-000-0000
+                </p>
+                <p style="color:white; text-align:center">
+                    Email: HotelSweetDreams@example.com
+                </p>
+            </div>
+
+        </div>
+        <div class="modal-footer" style="color:azure;">
+            <p>Hotel SweetDreams</p>
         </div>
     </div>
-</div>
 
-<div class="row justify-content-center">
-    <h3>Hotel SweetDreams!!</h3>
-</div>
+        @code{
 
-<div>
-    <p>
-        Hola pendejos, este es HOTEL SWEET DREAMS donde tus sueños se hacen realidad, aqui podras comer, dormir y c*****, llevate de la lujuria y adentrate a este sistema.
-        Puedes venir acompanado con tu pareja o venir con tus familiares o amigos, no tengas miedo y dele paca' BROOOOOOO.
-    </p>
-</div>
-
-@code{
-
-}
+        }
 
 
 
