--- a/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
@@ -4,6 +4,13 @@
         <div class="card-header">
             <h3>Tipos de Habitaciones</h3>
         </div>
+
+        <div class="view" style="        
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-image: url('resources/back.jpg');
+            background-position: center;">
+
         <div class="col col-auto">
             <div class="form-row align-items-center">
                 <div class="card" style="width: 500px;margin: auto;">
@@ -48,4 +55,5 @@
                 </div>
             </div>
       </div>
- </div>
+        </div>
+    </div>
