--- a/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#38AFFC">
+﻿<nav class="navbar navbar-expand-xl navbar-dark" style="background-color:#38AFFC">
     <a class="navbar-brand" href="">
         <img src="Resources\HotelPNG.png" style="width:35px;" />
         Sweet Dreams Admin
@@ -7,7 +7,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="">Inicio <span class="sr-only">(current)</span></a>
             </li>
