--- a/SweetDreams/SweetDreams.Clients/Pages/Index.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Index.razor
@@ -1,19 +1,20 @@
 ﻿@page "/"
 
-    <div class="view" style="        background-repeat: no-repeat;
+    <div class="view" style="        
+        background-repeat: no-repeat;
         background-size: cover;
         background-image: url('resources/mlb-villa-outdoor-fireplace.jpg');
         background-position: center;
         width: auto;
-        height: 640px;">
+        height: 880px;">
 
-        <div class="container position-relative" style="width: 1200px; height: 580px;">
+        <div class="container position-relative" style="width: 1000px; height: 800px;">
             <div class="modal-header justify-content-center">
                 <h3>Hotel SweetDreams!!</h3>
             </div>
 
             <div class="row justify-content-center">
-                <div class="row align-self-center" style="width:600px; height:300px;">
+                <div class="row align-self-center" style="width:900px; height:300px;">
                     <div id="carouselpass" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="carouselpass" data-slide-to="0" class="active"></li>
@@ -22,13 +23,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-interval="2000">
-                                <img src="../Resources/Room.jpg" style="width:600px; height:300px;" class="d-block ">
+                                <img src="../Resources/restaurantbeach.jpg" style="width:900px; height:300px;" class="d-block">                                
                             </div>
                             <div class="carousel-item" data-interval="2000">
-                                <img src="../Resources/Piscina.jpg" style="width:600px; height:300px;" class="d-block">
+                                <img src="../Resources/Room.jpg" style="width:900px; height:300px;" class="d-block ">
                             </div>
                             <div class="carousel-item" data-interval="2000">
-                                <img src="../Resources/restaurantbeach.jpg" style="width:600px; height:300px;" class="d-block">
+                                <img src="../Resources/Piscina.jpg" style="width:900px; height:300px;" class="d-block">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselpass" role="button" data-slide="prev">
@@ -42,33 +43,36 @@
                     </div>
                 </div>
             </div>
-            <div class="text-body" style="
-                                          background-color:darkgray;
+
+            <div class="card">
+                <div class="card-body">
+                    <div class="text-body" style="
                                           font-family:'Comic sans MS';
                                           font-size:16px;">
-                
-                <p style="color:black;">
-                    Bienvenidos al Hotel SweetDreams donde hacemos de tus vacaciones las mejores de todas.
-                </p>
-                <p style="color:black;">
-                    Este Hotel cuenta con todo tipo de Actividades, Comidas, Juegos de Piscina, Shows y más.
-                    Ademas contamos con los mejores servicios del lugar. Puedes traer a tu pareja o a tu familias y amigos
-                    para tener una divercion que jamas olvidaras.
-                </p>
-            </div>
 
-            <div class="text-body justify-content-center" style="
+                        <p style="color:black;">
+                            Bienvenidos al Hotel SweetDreams donde hacemos de tus vacaciones las mejores de todas.
+                        </p>
+                        <p style="color:black;">
+                            Este Hotel cuenta con todo tipo de Actividades, Comidas, Juegos de Piscina, Shows y más.
+                            Ademas contamos con los mejores servicios del lugar. Puedes traer a tu pareja o a tu familias y amigos
+                            para tener una divercion que jamas olvidaras.
+                        </p>
+                    </div>
+
+                    <div class="text-body justify-content-center" style="
                                           font-family:'Comic sans MS';
                                           color:white;
                                           font-size:16px;">
-                <p style="color:white; text-align:center">
-                    Tel:809-000-0000
-                </p>
-                <p style="color:white; text-align:center">
-                    Email: HotelSweetDreams@example.com
-                </p>
+                        <p style="color:black; text-align:center">
+                            Tel:809-000-0000
+                        </p>
+                        <p style="color:black; text-align:center">
+                            Email: HotelSweetDreams@example.com
+                        </p>
+                    </div>
+                </div>
             </div>
-
         </div>
         <div class="modal-footer" style="color:azure;">
             <p>Hotel SweetDreams</p>
